gradle spotlessJavaApply