@@ -59,7 +59,8 @@ import org.slf4j.LoggerFactory;
 
 class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(OracleJdbcSourceAcceptanceTest.class);
+  private static final Logger LOGGER =
+      LoggerFactory.getLogger(OracleJdbcSourceAcceptanceTest.class);
   protected static final String USERNAME_WITHOUT_PERMISSION = "new_user";
   protected static final String PASSWORD_WITHOUT_PERMISSION = "new_password";
   private static AirbyteOracleTestContainer ORACLE_DB;
@@ -92,7 +93,8 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
     INSERT_TABLE_WITHOUT_CURSOR_TYPE_QUERY = "INSERT INTO %s VALUES(to_clob('clob data'))";
     CREATE_TABLE_WITH_NULLABLE_CURSOR_TYPE_QUERY = "CREATE TABLE %s (%s VARCHAR(20))";
     INSERT_TABLE_WITH_NULLABLE_CURSOR_TYPE_QUERY = "INSERT INTO %s VALUES('Hello world :)')";
-    INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY = "INSERT INTO %s (name, timestamp) VALUES ('%s', TO_TIMESTAMP('%s', 'YYYY-MM-DD HH24:MI:SS'))";
+    INSERT_TABLE_NAME_AND_TIMESTAMP_QUERY =
+        "INSERT INTO %s (name, timestamp) VALUES ('%s', TO_TIMESTAMP('%s', 'YYYY-MM-DD HH24:MI:SS'))";
 
     ORACLE_DB = new AirbyteOracleTestContainer()
         .withEnv("NLS_DATE_FORMAT", "YYYY-MM-DD")
@@ -133,32 +135,33 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
   }
 
   protected AirbyteCatalog getCatalog(final String defaultNamespace) {
-    return new AirbyteCatalog().withStreams(List.of(
-        CatalogHelpers.createAirbyteStream(
-            TABLE_NAME,
-            defaultNamespace,
-            Field.of(COL_ID, JsonSchemaType.NUMBER),
-            Field.of(COL_NAME, JsonSchemaType.STRING),
-            Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
-            .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
-            .withSourceDefinedPrimaryKey(List.of(List.of(COL_ID))),
-        CatalogHelpers.createAirbyteStream(
-            TABLE_NAME_WITHOUT_PK,
-            defaultNamespace,
-            Field.of(COL_ID, JsonSchemaType.NUMBER),
-            Field.of(COL_NAME, JsonSchemaType.STRING),
-            Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
-            .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
-            .withSourceDefinedPrimaryKey(Collections.emptyList()),
-        CatalogHelpers.createAirbyteStream(
-            TABLE_NAME_COMPOSITE_PK,
-            defaultNamespace,
-            Field.of(COL_FIRST_NAME, JsonSchemaType.STRING),
-            Field.of(COL_LAST_NAME, JsonSchemaType.STRING),
-            Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
-            .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
-            .withSourceDefinedPrimaryKey(
-                List.of(List.of(COL_FIRST_NAME), List.of(COL_LAST_NAME)))));
+    return new AirbyteCatalog()
+        .withStreams(List.of(
+            CatalogHelpers.createAirbyteStream(
+                    TABLE_NAME,
+                    defaultNamespace,
+                    Field.of(COL_ID, JsonSchemaType.NUMBER),
+                    Field.of(COL_NAME, JsonSchemaType.STRING),
+                    Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
+                .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+                .withSourceDefinedPrimaryKey(List.of(List.of(COL_ID))),
+            CatalogHelpers.createAirbyteStream(
+                    TABLE_NAME_WITHOUT_PK,
+                    defaultNamespace,
+                    Field.of(COL_ID, JsonSchemaType.NUMBER),
+                    Field.of(COL_NAME, JsonSchemaType.STRING),
+                    Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
+                .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+                .withSourceDefinedPrimaryKey(Collections.emptyList()),
+            CatalogHelpers.createAirbyteStream(
+                    TABLE_NAME_COMPOSITE_PK,
+                    defaultNamespace,
+                    Field.of(COL_FIRST_NAME, JsonSchemaType.STRING),
+                    Field.of(COL_LAST_NAME, JsonSchemaType.STRING),
+                    Field.of(COL_UPDATED_AT, JsonSchemaType.STRING))
+                .withSupportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL))
+                .withSourceDefinedPrimaryKey(
+                    List.of(List.of(COL_FIRST_NAME), List.of(COL_LAST_NAME)))));
   }
 
   @AfterEach
@@ -176,48 +179,59 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
 
   void cleanUpTables() throws SQLException {
     final Connection connection = DriverManager.getConnection(
-        ORACLE_DB.getJdbcUrl(),
-        ORACLE_DB.getUsername(),
-        ORACLE_DB.getPassword());
+        ORACLE_DB.getJdbcUrl(), ORACLE_DB.getUsername(), ORACLE_DB.getPassword());
     for (final String schemaName : TEST_SCHEMAS) {
-      final ResultSet resultSet =
-          connection.createStatement().executeQuery(String.format("SELECT TABLE_NAME FROM ALL_TABLES WHERE OWNER = '%s'", schemaName));
+      final ResultSet resultSet = connection
+          .createStatement()
+          .executeQuery(
+              String.format("SELECT TABLE_NAME FROM ALL_TABLES WHERE OWNER = '%s'", schemaName));
       while (resultSet.next()) {
         final String tableName = resultSet.getString("TABLE_NAME");
-        final String tableNameProcessed = tableName.contains(" ") ? RelationalDbQueryUtils
-            .enquoteIdentifier(tableName, connection.getMetaData().getIdentifierQuoteString()) : tableName;
-        connection.createStatement().executeQuery("DROP TABLE " + schemaName + "." + tableNameProcessed);
+        final String tableNameProcessed = tableName.contains(" ")
+            ? RelationalDbQueryUtils.enquoteIdentifier(
+                tableName, connection.getMetaData().getIdentifierQuoteString())
+            : tableName;
+        connection
+            .createStatement()
+            .executeQuery("DROP TABLE " + schemaName + "." + tableNameProcessed);
       }
     }
-    if (!connection.isClosed())
-      connection.close();
+    if (!connection.isClosed()) connection.close();
   }
 
   @Override
   protected List<AirbyteMessage> getTestMessages() {
     return Lists.newArrayList(
-        new AirbyteMessage().withType(Type.RECORD)
-            .withRecord(new AirbyteRecordMessage().withStream(streamName)
+        new AirbyteMessage()
+            .withType(Type.RECORD)
+            .withRecord(new AirbyteRecordMessage()
+                .withStream(streamName)
                 .withNamespace(getDefaultNamespace())
-                .withData(Jsons.jsonNode(ImmutableMap
-                    .of(COL_ID, ID_VALUE_1,
-                        COL_NAME, "picard",
-                        COL_UPDATED_AT, "2004-10-19T00:00:00.000000")))),
-        new AirbyteMessage().withType(Type.RECORD)
-            .withRecord(new AirbyteRecordMessage().withStream(streamName)
+                .withData(Jsons.jsonNode(ImmutableMap.of(
+                    COL_ID, ID_VALUE_1,
+                    COL_NAME, "picard",
+                    COL_UPDATED_AT, "2004-10-19T00:00:00.000000")))),
+        new AirbyteMessage()
+            .withType(Type.RECORD)
+            .withRecord(new AirbyteRecordMessage()
+                .withStream(streamName)
                 .withNamespace(getDefaultNamespace())
-                .withData(Jsons.jsonNode(ImmutableMap
-                    .of(COL_ID, ID_VALUE_2,
-                        COL_NAME, "crusher",
-                        COL_UPDATED_AT,
-                        "2005-10-19T00:00:00.000000")))),
-        new AirbyteMessage().withType(Type.RECORD)
-            .withRecord(new AirbyteRecordMessage().withStream(streamName)
+                .withData(Jsons.jsonNode(ImmutableMap.of(
+                    COL_ID,
+                    ID_VALUE_2,
+                    COL_NAME,
+                    "crusher",
+                    COL_UPDATED_AT,
+                    "2005-10-19T00:00:00.000000")))),
+        new AirbyteMessage()
+            .withType(Type.RECORD)
+            .withRecord(new AirbyteRecordMessage()
+                .withStream(streamName)
                 .withNamespace(getDefaultNamespace())
-                .withData(Jsons.jsonNode(ImmutableMap
-                    .of(COL_ID, ID_VALUE_3,
-                        COL_NAME, "vash",
-                        COL_UPDATED_AT, "2006-10-19T00:00:00.000000")))));
+                .withData(Jsons.jsonNode(ImmutableMap.of(
+                    COL_ID, ID_VALUE_3,
+                    COL_NAME, "vash",
+                    COL_UPDATED_AT, "2006-10-19T00:00:00.000000")))));
   }
 
   @Test
@@ -240,42 +254,53 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
     });
 
     final DbState state = new DbState()
-        .withStreams(Lists.newArrayList(new DbStreamState().withStreamName(streamName).withStreamNamespace(namespace)));
-    final List<AirbyteMessage> actualMessagesFirstSync = MoreIterators
-        .toList(source.read(config, configuredCatalog, Jsons.jsonNode(state)));
+        .withStreams(Lists.newArrayList(
+            new DbStreamState().withStreamName(streamName).withStreamNamespace(namespace)));
+    final List<AirbyteMessage> actualMessagesFirstSync =
+        MoreIterators.toList(source.read(config, configuredCatalog, Jsons.jsonNode(state)));
 
-    final Optional<AirbyteMessage> stateAfterFirstSyncOptional = actualMessagesFirstSync.stream()
-        .filter(r -> r.getType() == Type.STATE).findFirst();
+    final Optional<AirbyteMessage> stateAfterFirstSyncOptional =
+        actualMessagesFirstSync.stream().filter(r -> r.getType() == Type.STATE).findFirst();
     assertTrue(stateAfterFirstSyncOptional.isPresent());
 
     database.execute(connection -> {
-      connection.createStatement().execute(
-          String.format("INSERT INTO %s(id, name, updated_at) VALUES (4,'riker', '2006-10-19')",
+      connection
+          .createStatement()
+          .execute(String.format(
+              "INSERT INTO %s(id, name, updated_at) VALUES (4,'riker', '2006-10-19')",
               getFullyQualifiedTableName(TABLE_NAME)));
-      connection.createStatement().execute(
-          String.format("INSERT INTO %s(id, name, updated_at) VALUES (5, 'data', '2006-10-19')",
+      connection
+          .createStatement()
+          .execute(String.format(
+              "INSERT INTO %s(id, name, updated_at) VALUES (5, 'data', '2006-10-19')",
               getFullyQualifiedTableName(TABLE_NAME)));
     });
 
-    final List<AirbyteMessage> actualMessagesSecondSync = MoreIterators
-        .toList(source.read(config, configuredCatalog,
-            stateAfterFirstSyncOptional.get().getState().getData()));
+    final List<AirbyteMessage> actualMessagesSecondSync = MoreIterators.toList(source.read(
+        config, configuredCatalog, stateAfterFirstSyncOptional.get().getState().getData()));
 
-    Assertions.assertEquals(2,
-        (int) actualMessagesSecondSync.stream().filter(r -> r.getType() == Type.RECORD).count());
+    Assertions.assertEquals(2, (int) actualMessagesSecondSync.stream()
+        .filter(r -> r.getType() == Type.RECORD)
+        .count());
     final List<AirbyteMessage> expectedMessages = new ArrayList<>();
-    expectedMessages.add(new AirbyteMessage().withType(Type.RECORD)
-        .withRecord(new AirbyteRecordMessage().withStream(streamName).withNamespace(namespace)
-            .withData(Jsons.jsonNode(ImmutableMap
-                .of(COL_ID, ID_VALUE_4,
-                    COL_NAME, "riker",
-                    COL_UPDATED_AT, "2006-10-19T00:00:00.000000")))));
-    expectedMessages.add(new AirbyteMessage().withType(Type.RECORD)
-        .withRecord(new AirbyteRecordMessage().withStream(streamName).withNamespace(namespace)
-            .withData(Jsons.jsonNode(ImmutableMap
-                .of(COL_ID, ID_VALUE_5,
-                    COL_NAME, "data",
-                    COL_UPDATED_AT, "2006-10-19T00:00:00.000000")))));
+    expectedMessages.add(new AirbyteMessage()
+        .withType(Type.RECORD)
+        .withRecord(new AirbyteRecordMessage()
+            .withStream(streamName)
+            .withNamespace(namespace)
+            .withData(Jsons.jsonNode(ImmutableMap.of(
+                COL_ID, ID_VALUE_4,
+                COL_NAME, "riker",
+                COL_UPDATED_AT, "2006-10-19T00:00:00.000000")))));
+    expectedMessages.add(new AirbyteMessage()
+        .withType(Type.RECORD)
+        .withRecord(new AirbyteRecordMessage()
+            .withStream(streamName)
+            .withNamespace(namespace)
+            .withData(Jsons.jsonNode(ImmutableMap.of(
+                COL_ID, ID_VALUE_5,
+                COL_NAME, "data",
+                COL_UPDATED_AT, "2006-10-19T00:00:00.000000")))));
     expectedMessages.add(new AirbyteMessage()
         .withType(Type.STATE)
         .withState(new AirbyteStateMessage()
@@ -328,20 +353,16 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
     // See https://www.oratable.com/oracle-user-schema-difference/
     if (supportsSchemas()) {
       for (final String schemaName : TEST_SCHEMAS) {
-        executeOracleStatement(
-            String.format(
-                "CREATE USER %s IDENTIFIED BY password DEFAULT TABLESPACE USERS QUOTA UNLIMITED ON USERS",
-                schemaName));
+        executeOracleStatement(String.format(
+            "CREATE USER %s IDENTIFIED BY password DEFAULT TABLESPACE USERS QUOTA UNLIMITED ON USERS",
+            schemaName));
       }
     }
   }
 
   public void executeOracleStatement(final String query) {
-    try (
-        final Connection connection = DriverManager.getConnection(
-            ORACLE_DB.getJdbcUrl(),
-            ORACLE_DB.getUsername(),
-            ORACLE_DB.getPassword());
+    try (final Connection connection = DriverManager.getConnection(
+            ORACLE_DB.getJdbcUrl(), ORACLE_DB.getUsername(), ORACLE_DB.getPassword());
         final Statement stmt = connection.createStatement()) {
       stmt.execute(query);
     } catch (final SQLException e) {
@@ -393,7 +414,8 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
   @Test
   void testSpec() throws Exception {
     final ConnectorSpecification actual = source.spec();
-    final ConnectorSpecification expected = Jsons.deserialize(MoreResources.readResource("spec.json"), ConnectorSpecification.class);
+    final ConnectorSpecification expected =
+        Jsons.deserialize(MoreResources.readResource("spec.json"), ConnectorSpecification.class);
 
     assertEquals(expected, actual);
   }
@@ -402,13 +424,16 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
   void testCheckIncorrectPasswordFailure() throws Exception {
     // by using a fake password oracle can block user account so we will create separate account for
     // this test
-    executeOracleStatement(String.format("CREATE USER locked_user IDENTIFIED BY password DEFAULT TABLESPACE USERS QUOTA UNLIMITED ON USERS"));
+    executeOracleStatement(
+        String.format(
+            "CREATE USER locked_user IDENTIFIED BY password DEFAULT TABLESPACE USERS QUOTA UNLIMITED ON USERS"));
     ((ObjectNode) config).put(JdbcUtils.USERNAME_KEY, "locked_user");
     ((ObjectNode) config).put(JdbcUtils.PASSWORD_KEY, "fake");
     final AirbyteConnectionStatus status = source.check(config);
 
     Assertions.assertEquals(AirbyteConnectionStatus.Status.FAILED, status.getStatus());
-    assertEquals("State code: 72000; Error code: 1017; Message: ORA-01017: invalid username/password; logon denied\n",
+    assertEquals(
+        "State code: 72000; Error code: 1017; Message: ORA-01017: invalid username/password; logon denied\n",
         status.getMessage());
   }
 
@@ -438,12 +463,13 @@ class OracleJdbcSourceAcceptanceTest extends JdbcSourceAcceptanceTest {
 
   @Test
   public void testUserHasNoPermissionToDataBase() throws Exception {
-    executeOracleStatement(String.format("CREATE USER %s IDENTIFIED BY %s", USERNAME_WITHOUT_PERMISSION, PASSWORD_WITHOUT_PERMISSION));
+    executeOracleStatement(String.format(
+        "CREATE USER %s IDENTIFIED BY %s",
+        USERNAME_WITHOUT_PERMISSION, PASSWORD_WITHOUT_PERMISSION));
     ((ObjectNode) config).put(JdbcUtils.USERNAME_KEY, USERNAME_WITHOUT_PERMISSION);
     ((ObjectNode) config).put(JdbcUtils.PASSWORD_KEY, PASSWORD_WITHOUT_PERMISSION);
     final AirbyteConnectionStatus status = source.check(config);
     Assertions.assertEquals(AirbyteConnectionStatus.Status.FAILED, status.getStatus());
     assertTrue(status.getMessage().contains("State code: 72000; Error code: 1045;"));
   }
-
 }
